can train on windows but cannot view output

--- a/configs/base_gs.yaml
+++ b/configs/base_gs.yaml
@@ -76,7 +76,7 @@ model:
   print_stats: true
 
 checkpoint:
-  iterations: ${int_list:[ 7000, 30000 ]}
+  iterations: ${int_list:[ 7000, 15000, 20000, 30000 ]}
 
 optimizer:
   type: adam # We only support adam and selective_adam for now
